--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ env_logger = "0.10"
 indicatif = "0.17"
 thiserror = "1.0"
 anyhow = "1.0"
+lazy_static = "1.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
